# C-Clipboard-Picker

./: README.md  THEMES.md  meson.build  run.py
cliphist_picker/: __main__.py  app.py  clipboard.py  config.py  dedup.py  models.py  row.py  window.py
data/: cliphist-picker.gresource.xml  config.toml  theme.conf
data/themes/: catppuccin-mocha.conf  catppuccin-mocha.css
src/: bench.c  clipboard.c  clipboard.h  config.h  dedup.c  dedup.h  main.c  models.h  row.c  row.h  window.c  window.h
